[package]
name = "rust-aba"
version = "0.1.0"
authors = ["Hayden Jackson <development@haydos.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_aba"
path = "./src/lib.rs"

[[bin]]
name = "rust_aba_example_test"
path = "./src/example_credit.rs"

[dependencies]
chrono = "0.4"